syntax = "proto3";

option java_package = "com.abhijith.public_channels";
option java_multiple_files = true;
option java_outer_classname = "GreetingServiceProto";


message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service GreetingService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}
